@@ -425,7 +425,7 @@
 #define PACKAGE_NAME "GNU Awk"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "GNU Awk 4.0.0i"
+#define PACKAGE_STRING "GNU Awk 4.0.0j"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "gawk"
@@ -434,7 +434,7 @@
 #define PACKAGE_URL "http://www.gnu.org/software/gawk/"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "4.0.0i"
+#define PACKAGE_VERSION "4.0.0j"
 
 /* Define to 1 if *printf supports %F format */
 #undef PRINTF_HAS_F_FORMAT
@@ -496,7 +496,7 @@
 
 
 /* Version number of package */
-#define VERSION "4.0.0i"
+#define VERSION "4.0.0j"
 
 /* Number of bits in a file offset, on hosts where this is settable. */
 #undef _FILE_OFFSET_BITS
