@@ -1,3 +1,9 @@
+2012-02-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dfa.c (parse_bracket_exp): Revert changes 2012-02-15 to stay
+	in sync with grep.
+	* dfa.h (dfarerror): Add __attribute__ from grep.
+
 2012-02-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Fix warnings from GCC 4.6.2 -Wall option.
